# ibc-template

./: .gitignore  LICENSE  Makefile  README.md  flake.nix  rust-toolchain
cosmwasm/: Cargo.toml  Makefile
cosmwasm/src/: ibc.rs  msg.rs  state.rs
solidity/: Makefile  foundry.toml
solidity/src/: IBCTypes.sol  IIBCChannelHandler.sol  IIBCModule.sol  IIBCPacketHandler.sol  IRelay.sol  PingPong.sol
web/: .env.example  .eslintrc.cjs  .prettierrc.mjs  Makefile  README.md  bun.lockb  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
web/scripts/: client.ts  demo-initiate.ts  handshake.ts  receipt.ts
web/src/: app.d.ts  app.html  style.css
web/src/lib/: constants.ts  temp.ts  utilities.ts
web/src/lib/abi/: ping-pong.ts
web/src/lib/components/: connect.svelte
web/src/lib/contract-interaction/: sepolia.ts  union.ts
web/src/lib/wallet/: evm.ts  union.ts
web/src/routes/: +layout.svelte  +page.svelte
