[package]
name         = "ibc-protocol"
edition      = "2021"
version      = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[features]
library = []

[dependencies]
cosmwasm-schema = { version = "1.5.3", default-features = false }
cosmwasm-std    = { version = "1.5.3", default-features = false,   features = ["stargate"] }
cw-storage-plus = { version = "1.2.0", default-features = false }
ethabi          = { version = "18.0.0", default-features = false }
serde           = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror       = { version = "1.0.57", default-features = false }
